--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+@import './variables.scss';
+@import './base.scss';
+@import './components/Header.scss';
+@import './components/Slider.scss';
