displayed all destinations with destinationcard component

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,3 +2,5 @@
 @import './base.scss';
 @import './components/Header.scss';
 @import './components/Slider.scss';
+@import './components/Destinations.scss';
+@import './components/DestinationCard.scss';
