added login and register form as bootstrap modal

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import './variables.scss';
 @import './base.scss';
 @import './components/Header.scss';
+@import './components/UserForm.scss';
 @import './components/Slider.scss';
 @import './components/Destinations.scss';
 @import './components/DestinationCard.scss';
