--- a/client/src/styles/components/DestinationCard.scss
+++ b/client/src/styles/components/DestinationCard.scss
@@ -5,6 +5,10 @@
   border-radius: 15px;
   cursor: pointer;
 
+  // &:hover {
+  //   background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+  // }
+
   > img {
     height: 300px;
     width: 100%;
