--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -6,6 +6,8 @@ $black: #000;
   padding: 6px 28px;
   border: 1px solid white;
   border-radius: 20px;
+  background: none;
+  color: white;
 }
 
 %image-cover {
