styled user profile page and implemented all details

--- a/client/src/styles/components/DestinationCard.scss
+++ b/client/src/styles/components/DestinationCard.scss
@@ -25,6 +25,7 @@
     position: absolute;
     bottom: 10px;
     padding-left: 15px;
+    color: white;
   
     .country-container {
       display: flex;
