--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -5,3 +5,4 @@
 @import './components/Slider.scss';
 @import './components/Destinations.scss';
 @import './components/DestinationCard.scss';
+@import './components/UserProfile.scss';
