created single destination page and added content

--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -15,3 +15,13 @@ body {
   @extend %image-cover;
   height: 300px;
 }
+
+.country-container {
+  display: flex;
+  gap: 8px;
+  align-items: baseline;
+
+  img {
+    width: 20px;
+  }
+}
