--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -5,4 +5,5 @@
 @import './components/Slider.scss';
 @import './components/Destinations.scss';
 @import './components/DestinationCard.scss';
+@import './components/SingleDestination.scss';
 @import './components/UserProfile.scss';
