--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -4,11 +4,12 @@ $white: #fff;
 $black: #000;
 
 %button-white-round {
-  padding: 6px 28px;
+  padding: 6px 28px 8px;
   border: 1px solid white;
   border-radius: 20px;
   background: none;
   color: white;
+  text-decoration: none;
 }
 
 %image-cover {
