added footer and icons on single destination page

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,3 +7,4 @@
 @import './components/DestinationCard.scss';
 @import './components/SingleDestination.scss';
 @import './components/UserProfile.scss';
+@import './components/Footer.scss';
