--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -17,6 +17,7 @@
   text-transform: uppercase;
   background: rgba(255,255,255,0.3);
   border-width: 2px;
+  font-weight: 500;
 }
 
 .description-container {
@@ -34,6 +35,10 @@
   
   a {
     @extend %button-white-round;
+  }
+
+  .space-before-icon {
+    margin-right: 10px;
   }
 }
 
