--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -40,11 +40,69 @@
   .space-before-icon {
     margin-right: 10px;
   }
+
+  .active-button {
+    background: rgba(255,255,255,0.1);
+    cursor: context-menu;
+  }
 }
+
+
+// CONTAINER WITH BORDER
 
 .details-container-w-border {
   padding: 30px 70px 17px;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
   margin: 60px;
+}
+
+
+// COMMENTS
+
+.comment-container {
+  padding: 30px 0px 12px;
+  border-bottom: 1px solid white;
+
+  &:first-child {
+    padding-top: 0px;
+  }
+
+  &:last-child {
+    border: none;
+  }
+}
+
+.user-img-sm {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 30px;
+}
+
+.user-title-container {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+
+  p {
+    margin-bottom: 0px;
+  }
+}
+
+.user-bio-sm {
+  color: $lightgrey;
+  font-style: italic;
+}
+
+.h4-sidebar {
+  font-size: 20px;
+  padding-bottom: 10px;
+}
+
+
+// FORM ADD COMMENT
+
+.form-button {
+  @extend %button-white-round;
 }
