--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -10,9 +10,32 @@ $black: #000;
   background: none;
   color: white;
   text-decoration: none;
+
+  &:hover {
+    box-shadow: 0 0 0 0.1rem rgba(255,255,255,.25);
+  }
 }
 
 %image-cover {
   object-fit: cover;
   width: 100%;
+}
+
+%text-input {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid white;
+  width: 100%;
+  background: none;
+  margin-bottom: 10px;
+  color: $white;
+  &:focus {
+    background: none;
+    color: $white;
+    border-color: $white;
+    box-shadow: 0 0 0 0.13rem rgba(255,255,255,.25);
+  }
+  &::placeholder {
+    color: $white;
+  }
 }
