--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -18,6 +18,7 @@
   background: rgba(255,255,255,0.3);
   border-width: 2px;
   font-weight: 500;
+  cursor: context-menu;
 }
 
 .description-container {
