seeded database, added modal to create a new destination

--- a/client/src/styles/components/UserProfile.scss
+++ b/client/src/styles/components/UserProfile.scss
@@ -4,8 +4,8 @@
 
   img {
     object-fit: cover;
-    width: 100%;
-    max-width: 270px;
+    width: 270px;
+    height: 270px;
     border-radius: 150px;
     float: right;
   }
