--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -4,6 +4,7 @@
   padding: 12px 0;
   background: transparent;
   transition: background 0.5s;
+  z-index: 2;
 
   &.scrolled {
     background-color: $grey;
@@ -94,6 +95,7 @@
 
   &:hover {
     background: rgba(255,255,255,0.3);
+    border-radius: 10px;
   }
 }
 
