--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -41,3 +41,17 @@ a {
   color: $white;
   text-decoration: none;
 }
+
+.headings-center {
+  text-align: center;
+  padding: 50px 0;
+
+  h2 {
+    font-size: 1.3rem;
+    font-weight: 300;
+  }
+  
+  h1 {
+    font-size: 2rem;
+  }
+}
