--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import './variables.scss';
 @import './base.scss';
+@import './components/Home.scss';
 @import './components/Header.scss';
 @import './components/UserForm.scss';
 @import './components/Slider.scss';
