added profile image upload on register form

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -8,4 +8,5 @@
 @import './components/DestinationCard.scss';
 @import './components/SingleDestination.scss';
 @import './components/UserProfile.scss';
+@import './components/ImageUpload.scss';
 @import './components/Footer.scss';
