--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -1,10 +1,16 @@
 * {
   box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500&display=swap');
 
 body {
   background-color: $grey;
   color: $white;
+  font-size: 15px;
+  letter-spacing: 0.2px;
+  font-weight: 300;
 }
 
 @media (min-width: 1200px) {
@@ -54,4 +60,8 @@ a {
   h1 {
     font-size: 2rem;
   }
+}
+
+.svg-inline--fa:hover {
+  opacity: 0.9;
 }
