--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -4,7 +4,7 @@
   padding: 12px 0;
   background: transparent;
   transition: background 0.5s;
-  z-index: 2;
+  z-index: 3;
 
   &.scrolled {
     background-color: $grey;
@@ -45,6 +45,11 @@
   width: 35px;
   height: 35px;
   border-radius: 35px;
+}
+
+.logo {
+  max-width: 290px;
+  padding-top: 2px;
 }
 
 
