seeded database, added more destinations and comments to the database

--- a/client/src/styles/components/DestinationCard.scss
+++ b/client/src/styles/components/DestinationCard.scss
@@ -24,7 +24,7 @@
   .details-container {
     position: absolute;
     bottom: 10px;
-    padding-left: 15px;
+    padding: 0px 10px 0 15px;
     color: white;
   
   }
