added form to update destination

--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -49,6 +49,13 @@
   margin-right: 10px;
 }
 
+.edit-icons {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0 -30px;
+  gap: 10px;
+}
+
 
 // CONTAINER WITH BORDER
 
