--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -15,7 +15,7 @@ body {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1100px;
+    max-width: 1130px;
   }
 }
 
@@ -31,7 +31,7 @@ body {
 .country-container {
   display: flex;
   gap: 8px;
-  align-items: baseline;
+  align-items: center;
 
   h2 {
     font-size: 16px;
@@ -40,6 +40,8 @@ body {
 
   img {
     width: 20px;
+    height: 13px;
+    object-fit: cover;
   }
 }
 
@@ -72,4 +74,12 @@ a {
   justify-content: center;
   align-items: center;
   height: 60vh;
+}
+
+.container-header-image {
+  padding: 0px;
+
+  row {
+    --bs-gutter-x: 0px;
+  }
 }
