--- a/client/src/styles/components/Footer.scss
+++ b/client/src/styles/components/Footer.scss
@@ -3,6 +3,8 @@ footer {
   text-align: center;
   padding: 26px 0px 10px;
   margin-top: 40px;
+  font-size: 14px;
+
 
   .footer-container {
     display: flex;
