--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -58,7 +58,6 @@
 .search-container {
   position: relative;
   right: -54px;
-  top: 3px;
 
   input, input:focus-visible {
     background: rgba(255,255,255,0.4);
@@ -66,12 +65,12 @@
     border: none;
     padding: 5px 3px 5px 15px;
     color: $white;
-    font-size: 14px;
+    font-size: 13px;
     outline: none;
 
     &::placeholder {
       color: $white;
-      font-size: 14px;
+      font-size: 13px;
     }
   }
 
@@ -101,7 +100,7 @@
 
   a {
     display: block;
-    padding: 7px 0px 8px 15px !important;
+    padding: 9px 0px 8px 15px !important;
   }
 
   &:hover {
@@ -112,4 +111,44 @@
 
 .navbar-right a {
   z-index: 10;
+}
+
+
+@media (max-width: 767px) {
+  .logo {
+    max-width: 220px;
+    padding-top: 0px;
+  }
+
+  .navbar-container .navbar-row .navbar-right {
+    gap: 18px;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 576px) {
+  .navbar-right svg {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+  .navbar-row {
+    display: block;
+  }
+
+  .navbar-logo {
+    display: flex;
+    justify-content: center;
+  }
+
+  .logo {
+    max-width: 280px;
+  }
+
+  .navbar-right {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
 }
