--- a/client/src/styles/components/UserProfile.scss
+++ b/client/src/styles/components/UserProfile.scss
@@ -4,17 +4,16 @@
 
   img {
     object-fit: cover;
-    width: 270px;
-    height: 270px;
-    border-radius: 150px;
+    width: 300px;
+    height: 300px;
+    border-radius: 160px;
     float: right;
   }
 
 }
 
 .profile-details {
-  padding-top: 40px;
-  text-align: center;
+  padding: 40px 0 0 40px;
 
   .button {
     @extend %button-white-round;
