--- a/client/src/styles/components/Forms.scss
+++ b/client/src/styles/components/Forms.scss
@@ -24,3 +24,14 @@
     width: 100%;
   }
 }
+
+.css-13cymwt-control {
+  padding: 4px;
+  border-radius: 10px;
+  border: 2px solid white;
+  margin-bottom: 4px;
+}
+
+.css-1jqq78o-placeholder {
+  color: $grey;
+}
