--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import './base.scss';
 @import './components/Home.scss';
 @import './components/Header.scss';
-@import './components/UserForm.scss';
+@import './components/Forms.scss';
 @import './components/Slider.scss';
 @import './components/Destinations.scss';
 @import './components/DestinationCard.scss';
