--- a/client/src/styles/components/ImageUpload.scss
+++ b/client/src/styles/components/ImageUpload.scss
@@ -6,10 +6,24 @@
 }
 
 .container-delete-image {
+  position: relative;
   display: flex;
   gap: 15px;
   button {
-    max-height: 27px;
-    padding: 0px 10px 3px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    position: absolute;
+    right: 48px;
+    top: -4px;
+    &:hover {
+      background: none;
+      font-size: 25px;
+      transition: all .2s ease-in-out;
+    }
   }
+}
+
+.image-input {
+  font-size: 14px;
 }
