--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -1,20 +1,35 @@
 .header-bg-image {
-  background-position: center;
-  background-size: cover;
-  height: 80vh;
+  padding: 0px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  height: 80vh;
+
+  > img {
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.8;
+  }
+
+  .content-after-header-img {
+    --bs-gutter-x: 0;
+  }
 }
 
 .categories {
   margin: 10px 0 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 11px;
 }
 
 .category-button {
   @extend %button-white-round;
   padding-top: 10px;
-  margin-right: 11px;
   text-transform: uppercase;
   background: rgba(255,255,255,0.3);
   border-width: 2px;
@@ -54,6 +69,37 @@
   justify-content: flex-end;
   margin: 20px 0 -30px;
   gap: 10px;
+}
+
+@media (max-width: 768px) {
+  .header-bg-image {
+    height: 50vh;
+  }
+  .category-button {
+    font-size: 14px;
+    padding: 4px 17px;
+  }
+}
+
+@media (max-width: 576px) {
+  .buttons-container {
+    flex-wrap: wrap;
+  }
+  .header-bg-image {
+    height: 40vh;
+  }
+  .category-button {
+    font-weight: 300;
+    font-size: 12px;
+    padding: 3px 9px;
+  }
+  .categories {
+    margin: 4px 0 10px;
+  }
+  .content-on-header h1 {
+    font-size: 24px;
+    margin-bottom: 0px;
+  }
 }
 
 
