--- a/client/src/styles/components/Slider.scss
+++ b/client/src/styles/components/Slider.scss
@@ -17,3 +17,27 @@
   bottom: 4rem;
   left: 10%;
 }
+
+@media(max-width: 992px) {
+  .carousel img {
+    height: 70vh;
+  }
+}
+
+@media(max-width: 768px) {
+  .carousel img {
+    height: 60vh;
+  }
+}
+
+@media(max-width: 576px) {
+  .carousel img {
+    height: 50vh;
+  }
+  .carousel-caption {
+    bottom: 3rem;
+    h1 {
+      font-size: 25px;
+    }
+  }
+}
