--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -29,6 +29,7 @@ $black: #000;
   background: $white;
   margin-bottom: 10px;
   color: $grey;
+  font-size: 14px;
   &:focus {
     background: $white;
     color: $grey;
