added function to invite friends to add this destination to their bucket list, the invited friend has the opportunity to accept or decline the invitation

--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -174,3 +174,12 @@
 .form-comment input, .form-comment textarea {
   @extend %text-input;
 }
+
+
+// INVITE A FRIEND
+
+// .container-invite-friend {
+//   display: flex;
+//   justify-content: center;
+//   margin-top: 40px;
+// }
