displayed invitation function in a better way and added styles

--- a/client/src/styles/components/UserProfile.scss
+++ b/client/src/styles/components/UserProfile.scss
@@ -83,6 +83,16 @@
   }
 }
 
+// NEW INVITATIONS
+
+.accordion-body .destination-card-grid {
+  width: 100%;
+}
+
+.accordion-invitations.accordion-item {
+  width: 100%;
+}
+
 
 @media (max-width: 767px) {
   .header-image {
