--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -39,7 +39,7 @@
 
 .description-container {
   text-align: center;
-  padding: 70px 0 40px;
+  padding: 70px 0 0px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -109,7 +109,7 @@
   padding: 30px 70px 17px;
   border-top: 1px solid white;
   border-bottom: 1px solid white;
-  margin: 60px;
+  margin: 60px 60px 40px;
 }
 
 
@@ -183,3 +183,58 @@
 //   justify-content: center;
 //   margin-top: 40px;
 // }
+
+.search-container-input {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 20px;
+  border: none;
+  padding: 11px 12px 9px 23px;
+  color: #fff;
+  font-size: 14px;
+  outline: none;
+
+  &::placeholder {
+    color: $white;
+    font-size: 14px;
+  }
+}
+
+.container-user-search {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 80px;
+  gap: 10px;
+}
+
+.dropdown-user-search {
+  position: absolute;
+  width: 396px;
+  top: 38px;
+  background: #222;
+  margin-top: 6px;
+  border-radius: 10px;
+}
+
+.button-invite {
+  @extend %button-white-round;
+
+  &:hover, &:active {
+    background: none !important;
+    border: 1px solid white !important;
+  }
+}
+
+.error-invitation {
+  text-align: center;
+  position: relative;
+  top: -63px;
+  color: red;
+  font-weight: 400;
+}
+
+.successful-invitation {
+  text-align: center;
+  position: relative;
+  top: -60px;
+}
