fixed accept invitation button and displayed invitations in a bootstrap modal

--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -211,7 +211,7 @@
   position: absolute;
   width: 396px;
   top: 38px;
-  background: #222;
+  background: #0e0e0e;
   margin-top: 6px;
   border-radius: 10px;
 }
@@ -237,4 +237,6 @@
   text-align: center;
   position: relative;
   top: -60px;
+  color: #198754;
+  font-weight: 500;
 }
