--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -240,3 +240,12 @@
   color: #198754;
   font-weight: 500;
 }
+
+@media (max-width: 460px) {
+  .container-user-search {
+    flex-direction: column;
+  }
+  .dropdown-user-search {
+    width: 230px;
+  }
+}
