--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -49,6 +49,7 @@
   display: flex;
   justify-content: center;
   gap: 20px;
+  margin-top: 14px;
   
   a {
     @extend %button-white-round;
@@ -72,9 +73,6 @@
 }
 
 @media (max-width: 768px) {
-  .header-bg-image {
-    height: 50vh;
-  }
   .category-button {
     font-size: 14px;
     padding: 4px 17px;
@@ -84,9 +82,6 @@
 @media (max-width: 576px) {
   .buttons-container {
     flex-wrap: wrap;
-  }
-  .header-bg-image {
-    height: 40vh;
   }
   .category-button {
     font-weight: 300;
