adjusted height of slider images

--- a/client/src/styles/components/SingleDestination.scss
+++ b/client/src/styles/components/SingleDestination.scss
@@ -251,6 +251,9 @@
     margin: 60px 40px;
     padding: 30px 10px 17px;
   }
+  .header-bg-image {
+    height: 70vh;
+  }
 }
 
 @media (max-width: 460px) {
