--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -85,6 +85,10 @@ a {
   }
 }
 
+.modal-footer {
+  justify-content: center;
+}
+
 @media(max-width: 576px) {
   .headings-center h1 {
     font-size: 1.7rem;
